MB-31967: Allow DCP clients to request datatype without value

Add new DCP_OPEN flag DCP_OPEN_NO_VALUE_WITH_UNDERLYING_DATATYPE,
which acts like DCP_OPEN_NO_VALUE (the documents' value is not sent),
but it returns the underlying documents' datatype instead of returning
the datatype of the payload.

This is a more backwards-compatible flag to the now-removed
STREAM_REQUEST flag DCP_ADD_STREAM_FLAG_NO_VALUE, and allows consumers
(such as the view engine) to obtain the underlying dataytpe of a
document without having to pay the cost of receiving and parsing the
document value.

Note this new flag assumes clients understand the XATTR datatype -
i.e. by specifying DCP_OPEN_NO_VALUE_WITH_UNDERLYING_DATATYPE clients
should expect to handle any combination of the JSON & XATTR datatype
bits.

Change-Id: Ie24a0dbfa4e65c2219f9ab4c1d842be674e952cf
Reviewed-on: http://review.couchbase.org/101634
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Reviewed-by: <ankit.prabhu@couchbase.com>